fixes for VM deployment
Signed-off-by: D <d_kelsey@uk.ibm.com>

--- a/Automated/ansible/playbooks/templates/sut-network.yaml.j2
+++ b/Automated/ansible/playbooks/templates/sut-network.yaml.j2
@@ -15,13 +15,13 @@ organizations:
       certificates:
       - name: 'User1'
         clientPrivateKey:
-          pem: {{ lookup('file', '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/keystore/priv_sk') | b64encode }}
+          # can't embed as the files only exist on the targets not on the controller
+          path: '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/keystore/priv_sk'
         clientSignedCert:
-          pem: {{ lookup('file', '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/signcerts/Admin@{{ first_peer_org }}-cert.pem') | b64encode }}
+          path: '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/signcerts/Admin@{{ first_peer_org }}-cert.pem'
     peers:
       - endpoint: '{{ first_peer }}:7051'
         grpcOptions:
           grpc.keepalive_time_ms: 600000
         tlsCACerts:
-          pem: |-
-            {{ lookup('file', '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/tlscacerts/tlsca.{{ first_peer_org }}-cert.pem') | indent(12) }}
+          path: '/root/crypto-config/peerOrganizations/{{ first_peer_org }}/users/Admin@{{ first_peer_org }}/msp/tlscacerts/tlsca.{{ first_peer_org }}-cert.pem'
