--- a/Automated/ansible/playbooks/templates/fsc-core.yaml.j2
+++ b/Automated/ansible/playbooks/templates/fsc-core.yaml.j2
@@ -9,11 +9,13 @@ logging:
 # ------------------- FSC Configuration -------------------------
 fsc:
   # The FSC id provides a name for this node instance and is used when
-  # naming docker resources.
+  # naming docker resources, get's added as a resolver to address and also used as an identifier for tracing
   id: fsc.{{ inventory_hostname }}
+
   # The networkId allows for logical separation of networks and is used when
-  # naming docker resources.
-  networkId: b37w5d4fqjb47muizw4dmc7r4m
+  # naming docker resources. Looks like it may only be used by NWO
+  # THIS IS NOT USED
+  # networkId: b37w5d4fqjb47muizw4dmc7r4m
 
   # Identity of this node, used to connect to other nodes assume this is not specific to the GRPC Server
   identity:
@@ -23,20 +25,32 @@ fsc:
     # Private key matching the X.509 certificate
     key:
       file: {{ __fscnode_identity_key}}
+
+  # Client X.509 certificates
+  # client:
+  #  certs:
+  #  - /home/dave/github-cloned/fabric-smart-client/samples/fabric/iou/testdata/fsc/crypto/peerOrganizations/fsc.example.com/users/Admin@fsc.example.com/msp/signcerts/Admin@fsc.example.com-cert.pem
+
   # Admin X.509 certificates
   # admin:
   #  certs:
   #  - /home/dave/github-cloned/fabric-smart-client/samples/fabric/iou/testdata/fsc/crypto/peerOrganizations/fsc.example.com/users/Admin@fsc.example.com/msp/signcerts/Admin@fsc.example.com-cert.pem
 
   # --------- GRPC Server Configuration  -----------------
-  # This represents the endpoint to other FSC nodes in the same organization.
+  # This represents the endpoint to other FSC nodes in the same organization. 
+  # This is the GRPC Server Address
   address: {{ inventory_hostname }}:20000
+
   # Whether the FSC node should programmatically determine its address
   # This case is useful for docker containers.
   # When set to true, will override FSC address.
-  addressAutoDetect: true
+  # THIS IS NOT USED
+  # addressAutoDetect: true
+
   # GRPC Server listener address
-  listenAddress: {{ inventory_hostname }}:20000
+  # THIS IS NOT USED
+  # listenAddress: {{ inventory_hostname }}:20000
+
   # TLS Settings for GRPC Server
   # (We use here the same set of properties as Hyperledger Fabric)
   tls:
@@ -55,6 +69,7 @@ fsc:
 
     # X.509 certificate used for TLS when making client connections.
     # If not set, fsc.tls.cert.file will be used instead
+    # THESE ARE NOT USED
     # clientCert:
     #   file: /home/dave/github-cloned/fabric-smart-client/samples/fabric/iou/testdata/fsc/crypto/peerOrganizations/fsc.example.com/peers/approver.fsc.example.com/tls/server.crt
     # Private key used for TLS when making client connections.
@@ -64,13 +79,14 @@ fsc:
 
     # rootcert.file represents the trusted root certificate chain used for verifying certificates
     # of other nodes during outbound connections. 
-    # TODO: TO IMPLEMENT: But this is a grpc server for clients only so I don't think this is used
+    # But this is a grpc server for clients only so I don't think this is used
     # Also rootCertFile uses a concatenation of all the ca certs of the fsc nodes so the entry is not correct at the moment
     # This only makes sense if this was for a client (but maybe the code handles both and the client uses this which is just plain horrible)
     # And which one is used ?????
-    rootcert:
-      file: {{ __fscnode_tls_ca }}
-    rootCertFile: {{ __fscnode_tls_ca }}
+    # THESE ARE NOT USED
+    # rootcert:
+    #   file: {{ __fscnode_tls_ca }}
+    # rootCertFile: {{ __fscnode_tls_ca }}
 
     # If mutual TLS is enabled, clientRootCAs.files contains a list of additional root certificates
     # used for verifying certificates of client connections.
@@ -95,12 +111,14 @@ fsc:
   # --------- P2P configuration ----------------
   p2p:
     # Listening address
-    listenAddress: /ip4/0.0.0.0/tcp/20001
+    listenAddress: /dns4/{{ __fscnode_host }}/tcp/20001
     # If empty, this is a P2P boostrap node. Otherwise, it contains the name of the fsc node that is a bootstrap node
-    {% if __fscnode_name == __fscnode_bootstrap %}
+    {% if __fscnode_role == __fscnode_bootstrap_role %}
+
     bootstrapNode:
     {% else %}
-    bootstrapNode: {{ __fscnode_bootstrap }}
+
+    bootstrapNode: {{ __fscnode_bootstrap_role }}
     {% endif %}
   # The Key-Value Store is used to store various information related to the FSC node
   kvs:
@@ -112,6 +130,8 @@ fsc:
 
 
   # --------- HTML Server configuration for REST calls -------------
+  # Note that the web client also uses the same config block where address is the address endpoint and tls is the client tls for
+  # mutual TLS
   web:
     enabled: true
     # HTTPS server listener address
@@ -123,13 +143,14 @@ fsc:
       key:
         file: {{ __fscnode_tls_key }} 
 
-    # TODO : This is used by why is it even needed ? a client that uses the web interface would need this and the code may have
-    # a client side when you generate a client maybe, but OMG this is horrible. It's also mandatory. Who uses mutual TLS for a web interface ?
+    # For the web interface mutual tls is mandatory, luckily all fsc nodes including the client have the same ca so we only need to provide
+    # the fsc org root ca
+    
       clientRootCAs:
         files:
         - {{ __fscnode_tls_ca }} 
 
-    # TODO: Same again with this, what is it used for ? actually looks like it isn't used at all 
+    # TODO: Same again with this, what is it used for ? actually looks like it isn't used at all THIS IS NOT USED
     # rootCertFile: {{ __fscnode_tls_ca }} 
 
   # ---------------- Tracing and Metrics --------------------------
@@ -160,13 +181,16 @@ fsc:
     resolvers:
 #TODO: Exclude self from this list
 {% for fscnode in (groups['fsc'] | default([])) %}
-    - name: {{ fscnode }}
+{% set fscnode_role = (hostvars | dict2items | selectattr('value.ansible_host', 'eq', fscnode) | map(attribute='value.group_names') | list | first | difference('fsc') | first) %}
+      # name has to match group name not the hostname
+    - name: {{ fscnode_role }}
       domain: 
       identity:
-        id: {{ fscnode }}
-        path: '/root/crypto-config/peerOrganizations/fsc/peers/{{fscnode}}/msp/signcerts/{{fscnode}}-cert.pem
+        # THIS IS NOT USED
+        # id: {{ fscnode }}
+        path: /root/crypto-config/peerOrganizations/fsc/peers/{{fscnode}}/msp/signcerts/{{fscnode}}-cert.pem
       addresses:
-      {% if fscnode == __fscnode_bootstrap %} 
+      {% if fscnode_role == __fscnode_bootstrap_role %} 
         P2P: {{__fscnode_bootstrap_address}}:20001
       {% endif %}
 
@@ -178,43 +202,53 @@ fabric:
   enabled: true
   default:
     default: true
-    BCCSP:
-      Default: SW
-      SW:
-        Hash: SHA2
-        Security: 256
-        FileKeyStore:
-          KeyStore:
-    mspConfigPath: {{ __fscnode_fabric_msp }}
-    localMspId: {{ __fscnode_owningorg }}
+    # TODO: What is this value used for ?
     mspCacheSize: 500
+    defaultMSP: {{ __fscnode_name }}
     msps:
+      - id: {{ __fscnode_name }}
+        mspType: bccsp
+        mspID: {{ __fscnode_owningorg }}MSP
+        # TODO: What is this value used for vs mspCacheSize
+        cacheSize: 0
+        path: {{ __fscnode_fabric_msp }}
+        opts:
+          BCCSP:
+            Default: SW
+            SW:
+              Hash: SHA2
+              Security: 256
+
+    ## TODO: This needs rationalisation
     tls:
       enabled:  true
       clientAuthRequired: false
-      # TODO: Why do we need a cert and key if we are purely a client ?
-      cert:
-        file: {{ __fscnode_fabric_tls_cert }}
-      key:
-        file: {{ __fscnode_fabric_tls_key }}
+      # TODO: Why do we need a cert and key if we are purely a client ? Should not be required now
+      # cert:
+      #   file: {{ __fscnode_fabric_tls_cert }}
+      # key:
+      #  file: {{ __fscnode_fabric_tls_key }}
 
-      # TODO: Only required if using mutual tls (I hope)
-      clientCert:
-        file: {{ __fscnode_fabric_tls_cert }}
-      clientKey:
-        file: {{ __fscnode_fabric_tls_key }}
+      # Only required if using mutual tls
+      # clientCert:
+      #   file: {{ __fscnode_fabric_tls_cert }}
+      # clientKey:
+      #   file: {{ __fscnode_fabric_tls_key }}
 
-      # TODO: One of these is used for authentication of peer TLS, one is used for mutual tls. Which is Which ?
-      # are these actually used for client connection ? what about the peers section ?
-      rootcert:
-        file: {{ __fscnode_fabric_tls_ca }}
-      clientRootCAs:
-        files:
-        # TODO: Why is this one entry set to this ? what is it used for ? 
-        - {{ __fscnode_fabric_tls_ca }}
-      rootCertFile: /root/crypto-config/cacerts.pem
+      # THIS IS NOT USED
+      #rootcert:
+      #  file: {{ __fscnode_fabric_tls_ca }}
 
-      # TODO: This looks like the indentation is wrong, also is there isn't a server
+      # THIS IS NOT USED
+      #clientRootCAs:
+      #  files:
+      #  # TODO: Why is this one entry set to this ? what is it used for ? 
+      #  - {{ __fscnode_fabric_tls_ca }}
+      
+      # THIS IS NOT USED
+      # rootCertFile: /root/crypto-config/cacerts.pem
+
+      # TODO: This should not be under tls and server section not required
       keepalive:
        client:
          interval: 60s
@@ -223,6 +257,10 @@ fabric:
          interval: 60s
          timeout: 600s
          minInterval: 60s
+
+    ordering:
+      numRetries: 3
+      retryInternal: 3s
 
 # This is a set of data that defines a client grpc connection to a peer, it looks like the code will
 # pick a peer randomly to query and to discover from. It should probably be a peer that's associated the org of the fsc node
@@ -240,40 +278,40 @@ fabric:
         default: true
         chaincodes:
           - name: {{ ccName }}
-            private: false
+            private: false # TODO: What does this mean ?
             
     vault:
       persistence:
-        type: file
+        # Persistence type can be \'badger\' (on disk) or \'memory\'
+        type: badger
         opts:
           path: /root/{{ inventory_hostname }}/vault
+      txidstore:
+          # Sets the maximum number of cached items
+          cache: 200      
 
-# TODO: Resolvers to IMPLEMENT
     endpoint:
       resolvers:
-{% for node in (groups['peers'] + groups['fsc'] | default([])) %}
+{% for fscnode in (groups['fsc'] | default([])) %}
+{% set fscnode_role = (hostvars | dict2items | selectattr('value.ansible_host', 'eq', fscnode) | map(attribute='value.group_names') | list | first | difference('fsc') | first) %}
+
       # a name as you can get the identity by name
       # domain allows to have the same name but differentiated ?
-      - name: {{node}}
+      - name: {{fscnode_role}}
         domain:
+        # TODO: Have we got replicated info here declaring msp information ?
         identity:
           # Don't think that id has any use it's just that the MSP structure that is 
           # used to parse this has it but it represents the name of the particular fabric type node (peer or client = fsc node)
           # addresses are only on the peers.
-          id: {{node}}
-          mspType: bccsp
-          # group the peer is in or owningorg for fsc node
-
-{% if node in groups['peers'] %}
-          mspID: {{hostvars[node].peer_org}}
-          path: /root/crypto-config/peerOrganizations/{{hostvars[node].peer_org}}/peers/{{node}}/msp/signcerts/{{node}}-cert.pem
+          # THIS IS NOT USED
+          # id: {{fscnode_role}}
+          # THIS HAS BEEN REMOVED
+          # mspType: bccsp
+          mspID: {{hostvars[fscnode].owning_org}}MSP
+          # The nodes msp (but private key isn't used)
+          path: /root/crypto-config/peerOrganizations/{{hostvars[fscnode].owning_org}}/peers/{{fscnode}}/msp
           addresses:
-             Listen: {{node}}:7051
-{% else %} 
-          mspID: {{hostvars[node].owning_org}}
-          path: /root/crypto-config/peerOrganizations/{{hostvars[node].owning_org}}/peers/{{node}}/msp/signcerts/{{node}}-cert.pem
-          addresses:
-{% endif %}
-
           aliases:
+          - {{ fscnode_role }}
 {% endfor %}
