WIP of fungible sample deployment
Signed-off-by: Dave Kelsey <d_kelsey@uk.ibm.com>

--- a/Automated/ansible/playbooks/templates/configtx.yaml.j2
+++ b/Automated/ansible/playbooks/templates/configtx.yaml.j2
@@ -275,7 +275,7 @@ Profiles:
             {% endfor %}
             {% if idemix_node_count != "0" %}
 
-#                - *IdemixOrg
+                - *IdemixOrg
             {% endif %}
             Capabilities: *ApplicationCapabilities
 
